--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -34,20 +34,34 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor='let product of products | productFilter:listFilter'>
-<td>
+        <tr *ngFor='let product of products'>
 
-  <img [src]='product.imageUrl' [title]='product.productName | uppercase' 
-  
-  [style.width.px]='imageWidth' [style.margin.px]='imageMargin'/>
-</td>
-<td>{{product.productName | uppercase}}</td>
+          <td>
+
+
+
+          <img [src]='product.imageUrl' [title]='product.productName | uppercase'
+
+
+
+          [style.width.px]='imageWidth' [style.margin.px]='imageMargin'/>
+
+          </td>
+
+          <td><a [routerLink]="['/product',product.productId]">{{product.productName | uppercase}}</a></td>
+
 <td>{{product.productCode | lowercase}}</td>
+
 <td>{{product.releaseDate}}</td>
+
 <td>{{product.price | currency:'USD':true:'1.2-2'}}</td>
+
 <td><ai-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)' ></ai-star></td>
 
-        </tr>
+
+
+</tr>
+
 
 
         
